force-app/main/default/objects/Grant__c/fields/Application_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Application_Due_Date__c</fullName>
    <label>Application Due Date</label>
    <type>Date</type>
</CustomField>