force-app/main/default/objects/Grant__c/fields/Award_Date__c.field-meta.xml
<CustomField>
    <fullName>Award_Date__c</fullName>
    <label>Award Date</label>
    <type>Date</type>
</CustomField>