force-app/main/default/objects/Grant__c/fields/Deprecated_Grant_Status__c.field-meta.xml
<CustomField>
    <fullName>Deprecated_Grant_Status__c</fullName>
    <description>DEPRECATED - Replaced by Status__c field in 2021. This field is no longer used.</description>
    <label>Deprecated Grant Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>In Review</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>