force-app/main/default/objects/Grant__c/recordTypes/Foundation_Grant.recordType-meta.xml
<RecordType>
    <fullName>Foundation_Grant</fullName>
    <active>true</active>
    <label>Foundation Grant</label>
</RecordType>