force-app/main/default/objects/Grant__c/recordTypes/Government_Grant.recordType-meta.xml
<RecordType>
    <fullName>Government_Grant</fullName>
    <active>true</active>
    <label>Government Grant</label>
</RecordType>